.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:40:14 **** Clean-only build of configuration Debug for project Balancer2_firm_TargetAngle ****
make -r clean 
rm -rf  Balancer2_firm_Default.axf
 
20:40:14 **** Build of configuration Debug for project Balancer2_firm_TargetAngle ****
make -r all 
Building file: ../src/control.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__USE_CMSIS=Balancer2_lib -DDEBUG -D__CODE_RED -D__REDLIB__ -I"/Users/koji/LPCXpresso/Balancer2/Balancer2_firm_TargetAngle/lib" -I"/Users/koji/LPCXpresso/Balancer2/Balancer2_firm_TargetAngle/inc" -O1 -g -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -mcpu=cortex-m3 -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"src/control.d" -MT"src/control.o" -MT"src/control.d" -o"src/control.o" "../src/control.c"
../src/control.c: In function 'Control':
../src/control.c:10:20: warning: implicit declaration of function 'getAngle' [-Wimplicit-function-declaration]
     double angle = getAngle();            // 現在の角度を取得
                    ^
../src/control.c:14:19: warning: implicit declaration of function 'calculatePIDOutput' [-Wimplicit-function-declaration]
     double outL = calculatePIDOutput(error);
                   ^
../src/control.c:18:26: error: 'wheel_L_angular_spd' undeclared (first use in this function)
     double correlation = wheel_L_angular_spd - wheel_R_angular_spd;
                          ^
../src/control.c:18:26: note: each undeclared identifier is reported only once for each function it appears in
../src/control.c:18:48: error: 'wheel_R_angular_spd' undeclared (first use in this function)
     double correlation = wheel_L_angular_spd - wheel_R_angular_spd;
                                                ^
make: *** [src/control.o] Error 1
